--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <!--meta data-->
-  <meta name="author" content="Lule moses" />
-  <meta name="title" content="Lule Moses" />
-  <meta name="description" content="Front-end developer"/>
-  <meta name="keywords" content="lulemoses,lule moses, lule, moses, Hultech, web developer kampala, front-end developer,front-end developer uganda" />
+  <meta name="author" content="Lule Moses" />
+  <meta name="title" content="lule moses" />
+  <meta name="google-site-verification" content="9urQ9Mgzb7CftrM58s7uamwkPq4Utxm1SIaTLv2L6-U" />
+  <meta name="description" content="Hi , am Lule Moses a Front-end developer with one year experience , I develop and design webpages, websites and web applications using HTML, CSS with SASS, JAVASCRIPT and PHP with my SQL."/>
+  <meta name="keywords" content="lulemoses,lulemoses, lule, moses, Hultech, web developer kampala, front-end developer,front-end developer uganda" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -119,16 +120,16 @@
                             <form>
                                 <h1 class="title">Send Message</h1>
                                 <div class="input">
-                                    <input type="text" name="fullname" id="" placeholder="Fullname">
+                                    <input type="text" name="fullname" id="" placeholder="Fullname" required>
                                 </div>
                                 <div class="input">
-                                    <input type="email" name="email" id="" placeholder="Email">
+                                    <input type="email" name="email" id="" placeholder="Email" required>
                                 </div>
                                 <div class="input">
-                                    <input type="text" name="subject" id="" placeholder="Subject">
+                                    <input type="text" name="subject" id="" placeholder="Subject"required >
                                 </div>
                                 <div class="input">
-                                    <textarea name="details" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+                                    <textarea name="details" id="" cols="30" rows="10" placeholder="Your message" required></textarea>
                                 </div>
                                 <div class="btn-group">
                                     <button type="submit" class="btn-blue">Send Message</button>
@@ -205,7 +206,6 @@
         <article class="card">
             <div class="card-header">
                 <h1>{{project}}</h1>
-                <i class="fa fa-php fa-lg"></i>
             </div>
             <div class="card-body">
                 <p>hi</p>
