--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css"> -->
     
     <!-- Fontawesome icons CSS Files -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     
     <!-- =======================================================
@@ -192,7 +193,7 @@
                     <div class="works row-content">
                         <div class="work">
                             <h2>Fiora <span class="tag-primary">E-commerce</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <p>A flower shopping program.</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>SCSS</li>
@@ -202,7 +203,7 @@
                         </div>
                         <div class="work">
                             <h2>Hul-net <span class="tag-danger">Blog</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <p>A technology news blog site with a daily tech report.</p>
                             <ul>
                                 <li>React</li>
                             </ul>
@@ -210,7 +211,7 @@
                         </div>
                         <div class="work">
                             <h2>Personal Site <span class="tag-success">Portfolio</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <p>A simple reusable portfolio design for any professional work.</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>SCSS</li>
@@ -219,34 +220,13 @@
                             <p>From : 2019/12/01 - To : 2022/02/22</p>
                         </div>
                         <div class="work">
-                            <h2>Real Estates <span class="tag-primary">E-commerce</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <h2>CRUD <span class="tag-primary">Back-end</span></h2>
+                            <p>This simple system the can stores user information.</p>
                             <ul>
                                 <li>PHP</li>
                                 <li>MySQL</li>
                             </ul>
                             <p>From : 2019/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2>CRUD <span class="tag-primary">Back-end</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
-                            <ul>
-                                <li>PHP</li>
-                                <li>MySQL</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2>CRUD <span class="tag-primary">Back-end</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
-                            <ul>
-                                <li>React</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
-                            <ul>
-                                <li><i class="fa -fa-eye"></i> view</li>
-                                <li><i class="fa -fa-code"></i> code</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -299,6 +279,7 @@
     <!-- ======= /Footer ======= -->
     <!-- ======= Scripts ======= -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Template Main JS File -->
     <script src="./assets/js/index.js"></script>
