--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css"> -->
     
     <!-- Fontawesome icons CSS Files -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     
     <!-- =======================================================
@@ -56,9 +57,9 @@
                              <li class="nav-item"><a href="#about"> About</a></li>
                              <li class="nav-item"><a href="#work"> Work</a></li>
                              <li class="nav-item"><a href="#services">Services</a></li>
-                             <li class="nav-item"><a href="blogs.html">Blogs</a></li>
+                             <li class="nav-item"><a href="https://hultechnews.blogspot.com/">Blogs</a></li>
                              <li class="nav-item  active"><a href="#contact">Contact</a></li>
-                             <li class="nav-item form"><a href="code.html" class="btn-primary">Projects</a></li>
+                             <li class="nav-item form"><a href="https://lulem.000webhostapp.com/projects/" class="btn-primary">Projects</a></li>
                          </ul>
                      </nav>
                  </div>
@@ -191,62 +192,42 @@
                     <h3 class="section-title">Work / Projects</h3>
                     <div class="works row-content">
                         <div class="work">
-                            <h2>Fiora <span class="tag-primary">E-commerce</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <h2><a href="https://lulem.000webhostapp.com/projects/fiora/">Fiora <span class="tag-primary">E-commerce</span></a></h2>
+                            <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>SCSS</li>
                                 <li>JS</li>
                             </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
+                            <p>From : 2019/12/01 - To : Present</p>
                         </div>
                         <div class="work">
                             <h2>Hul-net <span class="tag-danger">Blog</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <p>It
+                                 is a news website that provide with all the lastest technology and science news,research and innovations from the all world</p>
                             <ul>
                                 <li>React</li>
                             </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
+                            <p>From : 2021/12/01 - To : 2022/02/22</p>
+                        </div>
+                        <div class="work">
+                            <h2><a href="https://lulem.000webhostapp.com/projects/sports/">Allianz Soccer <span class="tag-primary">website</span></a></h2>
+                            <p>Sports teams website developed in PHP and a relational database system in MySQL. Designed using SASS and JAVASCRIPT</p>
+                            <ul>
+                                <li>PHP</li>
+                                <li>MySQL</li>
+                            </ul>
+                            <p>From : 2022/02/10 - To : present</p>
                         </div>
                         <div class="work">
                             <h2>Personal Site <span class="tag-success">Portfolio</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
+                            <p>A simple reusable portfolio design for any professional work. This awesome page that you are scrolling</p>
                             <ul>
                                 <li>HTML</li>
                                 <li>SCSS</li>
                                 <li>JS</li>
                             </ul>
                             <p>From : 2019/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2>Real Estates <span class="tag-primary">E-commerce</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
-                            <ul>
-                                <li>PHP</li>
-                                <li>MySQL</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2>CRUD <span class="tag-primary">Back-end</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
-                            <ul>
-                                <li>PHP</li>
-                                <li>MySQL</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2>CRUD <span class="tag-primary">Back-end</span></h2>
-                            <p>A website that deliveries you Fresh and healthy trees, plants, seeds, seedlings, and garden care services. Let's save the planet together.</p>
-                            <ul>
-                                <li>React</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
-                            <ul>
-                                <li><i class="fa -fa-eye"></i> view</li>
-                                <li><i class="fa -fa-code"></i> code</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -299,6 +280,7 @@
     <!-- ======= /Footer ======= -->
     <!-- ======= Scripts ======= -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Template Main JS File -->
     <script src="./assets/js/index.js"></script>
