--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
     ======================================================== -->
 </head>
 <body>
+    <!-- ======= Hero ======= -->
+    <div id="hero" class="row align-center">
+        <div class="col hero">
+            <h2 class="title">Hi , am Moses Lule,</h2>
+            <p><span id="lul"></span></p>
+            <ul class="social-media">
+                <li><a href="mailto:lulemoses67@gmail.com" ><i class="fa fa-envelope"></i></a></li>
+                <li><a href="https://ug.linkedin.com/in/www.linkedin.com/in/lulemoses67" target="blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/lulemoses67" target="blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.instagram.com/lulemoses67/"target="blank" ><i class="fab fa-instagram"></i></a></li>
+            </ul>
+            <p><b>SCROLL DOWN</b> <i class="fas fa-caret-down"></i></p>
+        </div>
+    </div>
+    <!-- ======= /Hero ======= -->
     <!-- ======= Header ======= -->
     <header>
         <div class="container">
@@ -69,26 +84,6 @@
      <!-- ======= /Header ======= -->
      <!-- ======= Main ======= -->
      <main>
-        <!-- ======= Hero ======= -->
-        <div id="hero">
-            <div class="container">
-                <div class="row align-center">
-                    <div class="col-lg-12">
-                        <p id="lul"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ======= /Hero ======= -->
-        <!-- ======= Breadcrumbs ======= -->
-        <div class="container">
-            <ul class="breadcrumbs">
-                <li>Home</li>
-                <li>/</li>
-                <li id="active"></li>
-            </ul>
-        </div>
-        <!-- ======= /Breadcrumbs ======= -->
         <!-- ======= About ======= -->
         <section id="about">
             <div class="container">
