--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="assets/icons/CartoonAvatar1641242084019.png" rel="icon">
     
     <!-- Template Main CSS File -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css"> -->
     
@@ -40,18 +41,57 @@
     ======================================================== -->
 </head>
 <body>
+    <div class="modal">
+        <p id="close-modal" class="toggle-modal"><span class="fa fa-close"></span></p>
+        <!-- ======= Contact ======= -->
+        <div id="contact">
+            <div class="container">
+                <div class="row justify-center">
+                    <div class="col-md-12 col-lg-9">
+                        <form id="contactForm">
+                            <h2>Send us your Feedback</h2>
+                            <div class="form-element">
+                                <label for="fisrtname">First Name</label>
+                                <input type="text" name="fisrtname" id="fisrtname" placeholder="First Name" required>
+                            </div>
+                            <div class="form-element">
+                                <label for="lastname">Last Name</label>
+                                <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
+                            </div>
+                            <div class="form-element">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email" placeholder="Email" required>
+                            </div>
+                            <div class="form-element">
+                                <label for="subject">Subject</label>
+                                <input type="text" name="subject" id="subject" placeholder="Subject"required >
+                            </div>
+                            <div class="form-element">
+                                <label for="message">Message</label>
+                                <textarea name="details" id="message" cols="30" rows="10" placeholder="Your message" required></textarea>
+                            </div>
+                            <div class="btn-group">
+                                <button type="submit" class="btn-success">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ======= /Contact ======= -->
+    </div>
     <!-- ======= Hero ======= -->
     <div id="hero" class="row align-center">
         <div class="col hero">
-            <h2 class="title">Hi , am Moses Lule,</h2>
-            <p><span id="lul"></span></p>
+            <img src="assets\icons\IMG_20220110_175457_4~2.jpg" alt="lule moses">
+            <h2 class="title">Hi , am Lule Moses</h2>
+            <p><span id="lul"></span>_</p>
             <ul class="social-media">
                 <li><a href="mailto:lulemoses67@gmail.com" ><i class="fa fa-envelope"></i></a></li>
                 <li><a href="https://ug.linkedin.com/in/www.linkedin.com/in/lulemoses67" target="blank"><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/lulemoses67" target="blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.instagram.com/lulemoses67/"target="blank" ><i class="fab fa-instagram"></i></a></li>
             </ul>
-            <p><b>SCROLL DOWN</b> <i class="fas fa-caret-down"></i></p>
         </div>
     </div>
     <!-- ======= /Hero ======= -->
@@ -72,9 +112,9 @@
                              <li class="nav-item"><a href="#about"> About</a></li>
                              <li class="nav-item"><a href="#work"> Work</a></li>
                              <li class="nav-item"><a href="#services">Services</a></li>
-                             <li class="nav-item"><a href="https://hultechnews.blogspot.com/">Blogs</a></li>
-                             <li class="nav-item  active"><a href="#contact">Contact</a></li>
-                             <li class="nav-item form"><a href="https://lulem.000webhostapp.com/projects/" class="btn-primary">Projects</a></li>
+                             <li class="nav-item"><a href="https://hultechnews.blogspot.com/" target="blank">Blog</a></li>
+                             <li class="nav-item  toggle-modal"><a href="#contact">Contact</a></li>
+                             <li class="nav-item form"><a href="https://lulem.000webhostapp.com/" class="btn-primary" target="blank">Projects</a></li>
                          </ul>
                      </nav>
                  </div>
@@ -88,20 +128,9 @@
         <section id="about">
             <div class="container">
                 <h3 class="section-title">About Me</h3>
-                <div>
-                    <div class="about-preview">
-                        <div class="body">
-                            <img src="assets\icons\IMG_20220110_175457_4~2.jpg" alt="">
-                            <ul>
-                                <li>Name: <span>Lule Moses</span></li>
-                                <li>Profile: <span>Front-end Developer</span></li>
-                                <li>Email: <span><a href="">lulemoses67@gmail.com</a></span></li>
-                                <li>Phone: <span><a href="">+256 756150066</a></span></li>
-                            </ul>
-                        </div>
-                        <div class="details">
-                            <p>Hi, am moses a front-end developer , i design and develop awesome, responsive and effective USER INTERFACE and USER EXPERIENCE for websites, web applications and mobile applications using SASS, JAVASCRIPT, BOOTSTRAP and REACTSTRAP for Reacts apps. I intend to become a full-stack with time and i been developing some databases appication in php and mysql , and have created some CRUDS and relational databases systems. I use PDO and like using the POST-REDIRECT-GET pattern, sessions, protect my programms from html injections as possible and understand the Model Controller and View Controller.I love technology, I like talking about tech and this why whenever am free i try to write on my blog . It's a tech news blog with a daily tech report www.hul-net.com</p>
-                        </div>
+                <div class="row-content">
+                    <div class="card">
+                        <p><q> Hi, am moses a front-end developer , i design and develop awesome, responsive and effective USER INTERFACE and USER EXPERIENCE for websites, web applications and mobile applications using SASS, JAVASCRIPT, BOOTSTRAP and REACTSTRAP for Reacts apps. I intend to become a full-stack with time and i been developing some databases appication in php and mysql , and have created some CRUDS and relational databases systems. I use PDO and like using the POST-REDIRECT-GET pattern, sessions, protect my programms from html injections as possible and understand the Model Controller and View Controller.I love technology, I like talking about tech and this why whenever am free i try to write on my blog . It's a tech news blog with a daily tech report www.hul-net.com </q></p>
                     </div>
                 </div>
             </div>
@@ -184,45 +213,32 @@
             <!-- ======= Work ======= -->
             <section id="work">
                 <div class="container">
-                    <h3 class="section-title">Work / Projects</h3>
-                    <div class="works row-content">
-                        <div class="work">
-                            <h2><a href="https://lulem.000webhostapp.com/projects/fiora/">Fiora <span class="tag-primary">E-commerce</span></a></h2>
-                            <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
-                            <ul>
-                                <li>HTML</li>
-                                <li>SCSS</li>
-                                <li>JS</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : Present</p>
+                    <h3 class="section-title">Work</h3>
+                    <div class="row">
+                        <div class="col-md-12 col-lg-6">
+                            <div class="work">
+                                <h2>Fiora <span class="tag-primary">E-commerce</span></h2>
+                                <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
+                                <ul>
+                                    <li><i class="fa-brands fa-react"></i></li>
+                                </ul>
+                                <p><a href="" class="btn-outline"><i class="fab fa-github"></i> code</a>
+                                <a href="" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
+                            </div>
                         </div>
-                        <div class="work">
-                            <h2>Hul-net <span class="tag-danger">Blog</span></h2>
-                            <p>It
-                                 is a news website that provide with all the lastest technology and science news,research and innovations from the all world</p>
-                            <ul>
-                                <li>React</li>
-                            </ul>
-                            <p>From : 2021/12/01 - To : 2022/02/22</p>
-                        </div>
-                        <div class="work">
-                            <h2><a href="https://lulem.000webhostapp.com/projects/sports/">Allianz Soccer <span class="tag-primary">website</span></a></h2>
-                            <p>Sports teams website developed in PHP and a relational database system in MySQL. Designed using SASS and JAVASCRIPT</p>
-                            <ul>
-                                <li>PHP</li>
-                                <li>MySQL</li>
-                            </ul>
-                            <p>From : 2022/02/10 - To : present</p>
-                        </div>
-                        <div class="work">
-                            <h2>Personal Site <span class="tag-success">Portfolio</span></h2>
-                            <p>A simple reusable portfolio design for any professional work. This awesome page that you are scrolling</p>
-                            <ul>
-                                <li>HTML</li>
-                                <li>SCSS</li>
-                                <li>JS</li>
-                            </ul>
-                            <p>From : 2019/12/01 - To : 2022/02/22</p>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="work">
+                                <h2>Allianz Soccer <span class="tag-primary">website</span></h2>
+                                <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
+                                <ul>
+                                    <li><i class="fa-brands fa-html5"></i></li>
+                                    <li><i class="fab fa-sass"></i></li>
+                                    <li><i class="fa-brands fa-js-square"></i></li>
+                                    <li><i class="fa-brands fa-php"></i></li>
+                                </ul>
+                                <p><a href="" class="btn-outline"><i class="fab fa-github"></i> code</a>
+                                <a href="" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -232,44 +248,22 @@
     <!-- ======= /Main ======= -->
     <!-- ======= Footer ======= -->
     <footer>
-        <!-- ======= Contact ======= -->
-        <section id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-lg-9">
-                        <form action="">
-                            <h2>Send us your Feedback</h2>
-                            <div class="form-element">
-                                <label for="fisrtname">First Name</label>
-                                <input type="text" name="fisrtname" id="fisrtname" placeholder="First Name" required>
-                            </div>
-                            <div class="form-element">
-                                <label for="lastname">Last Name</label>
-                                <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
-                            </div>
-                            <div class="form-element">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" id="email" placeholder="Email" required>
-                            </div>
-                            <div class="form-element">
-                                <label for="subject">Subject</label>
-                                <input type="text" name="subject" id="subject" placeholder="Subject"required >
-                            </div>
-                            <div class="form-element">
-                                <label for="message">Message</label>
-                                <textarea name="details" id="message" cols="30" rows="10" placeholder="Your message" required></textarea>
-                            </div>
-                            <div class="btn-group">
-                                <button type="submit" class="btn-outline">Send Message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ======= /Contact ======= -->
+        <ul class="social-media">
+            <li><a href="mailto:lulemoses67@gmail.com" ><i class="fa fa-envelope"></i></a></li>
+            <li><a href="https://ug.linkedin.com/in/www.linkedin.com/in/lulemoses67" target="blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/lulemoses67" target="blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.instagram.com/lulemoses67/"target="blank" ><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        <ul class="nav-bars">
+            <li class="nav-item"><a href="mailto:lulemoses67@gmail.com">Contact</a></li>
+            <li class="nav-item"><a href="mailto:lulemoses67@gmail.com"> Hire</a></li>
+            <li class="nav-item"><a href="mailto:lulemoses67@gmail.com"> Make a Team</a></li>
+            <li class="nav-item"><a href="https://hultechnews.blogspot.com/"> Blog</a></li>
+            <li class="nav-item"><a href="https://www.upwork.com/lulemoses67"> Upwork</a></li>
+            <li class="nav-item"><a href="https://www.fiverr.com/lulemoses67"> Fiverr</a></li>
+        </ul>
         <div class="copyright">
-            <p>&copy; Open Source. Designed by Lule Moses</p>
+            <p><small>© 2022 Lule Moses . All rights reserved. No part of this site may be reproduced without my written permission.</small></p>
         </div>
     </footer>
     <!-- ======= /Footer ======= -->
