--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     </script>
 
     <!-- icon -->
-    <link href="assets/icons/CartoonAvatar1641242084019.png" rel="icon">
+    <link href="assets/icons/1645935213018.png" rel="icon">
     
     <!-- Template Main CSS File -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css"> -->
     
     <!-- Fontawesome icons CSS Files -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -83,7 +82,6 @@
     <!-- ======= Hero ======= -->
     <div id="hero" class="row align-center">
         <div class="col hero">
-            <img src="assets\icons\IMG_20220110_175457_4~2.jpg" alt="lule moses">
             <h2 class="title">Hi , am Lule Moses</h2>
             <p><span id="lul"></span>_</p>
             <ul class="social-media">
@@ -125,7 +123,7 @@
      <!-- ======= Main ======= -->
      <main>
         <!-- ======= About ======= -->
-        <section id="about">
+        <section id="about" class="reveal fade-in">
             <div class="container">
                 <h3 class="section-title">About Me</h3>
                 <div class="row-content">
@@ -137,7 +135,7 @@
         </section>
         <!-- ======= /About ======= -->
         <!-- ======= Skills ======= -->
-        <section>
+        <section class="reveal fade-in">
             <div class="container">
                 <h3 class="section-title">Skills</h3>
                 <div class="skills-card">
@@ -174,7 +172,7 @@
         </section>
         <!-- ======= /Skills ======= -->
         <!-- ======= Service ======= -->
-        <section id="services">
+        <section id="services" class="reveal fade-in">
             <div class="container">
                 <h3 class="section-title">Services</h3>
                 <div class="blog-list row-content hul">
@@ -211,24 +209,24 @@
             </section>
             <!-- ======= /Service ======= -->
             <!-- ======= Work ======= -->
-            <section id="work">
+            <section id="work" class="reveal fade-in">
                 <div class="container">
                     <h3 class="section-title">Work</h3>
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <div class="work">
-                                <h2>Fiora <span class="tag-primary">E-commerce</span></h2>
+                                <h2>Fiora <span class="tag-detail">E-commerce</span></h2>
                                 <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
                                 <ul>
                                     <li><i class="fa-brands fa-react"></i></li>
                                 </ul>
                                 <p><a href="" class="btn-outline"><i class="fab fa-github"></i> code</a>
-                                <a href="" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
+                                <a href="https://lulem.000webhostapp.com/fiora/" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
                             <div class="work">
-                                <h2>Allianz Soccer <span class="tag-primary">website</span></h2>
+                                <h2>Allianz Soccer <span class="tag-detail">website</span></h2>
                                 <p>A system that sells flowers and trees with garden care services. It recieves orders and makes deliveries</p>
                                 <ul>
                                     <li><i class="fa-brands fa-html5"></i></li>
@@ -237,7 +235,7 @@
                                     <li><i class="fa-brands fa-php"></i></li>
                                 </ul>
                                 <p><a href="" class="btn-outline"><i class="fab fa-github"></i> code</a>
-                                <a href="" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
+                                <a href="https://lulem.000webhostapp.com/allianzsoccer/index.php" class="btn-outline"><i class="fa fa-eye"></i> view</a></p>
                             </div>
                         </div>
                     </div>
