--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </script>
 
     <!-- icon -->
-    <link href="../assets/icons/1645935213018.png" rel="icon">
+    <link href="./assets/icons/logo.png" rel="icon">
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- Fontawesome icons CSS Files -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -279,14 +279,6 @@
             <!-- ======= /Work ======= -->
         </main>
     <!-- ======= /MAIN ======= -->
-    <!-- ======= Scripts ======= -->
-        <!-- jquery JS File or cdn-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- Handlebars JS File or cdn-->
-        <script src="../node_modules/handlebars/dist/handlebars.js"></script>
-        <!-- Template Main JS File -->
-        <script src="../assets/js/index.js"></script>
-    <!-- ======= /Scripts ======= -->
     <!-- ======= /FOOTER ======= -->
         <footer>
             <h3 class="text-center">Get in Touch</h3>
@@ -297,7 +289,7 @@
                 <li><a href="https://www.instagram.com/lulemoses67/"target="blank" ><i class="fab fa-instagram"></i></a></li>
             </ul>
             <ul class="nav-bars">
-                <li class="nav-item"><a href="https://meduim.com/lulemoses67">Blog</a></li>
+                <li class="nav-item"><a href="https://medium.com/@lulemoses67">Blog</a></li>
                 <li class="nav-item"><a href="mailto:lulemoses67@gmail.com"> Hire</a></li>
                 <li class="nav-item"><a href="https://r.honeygain.me/LULEM020C1"> Honeygain</a></li>
                 <li class="nav-item"><a href="https://hultechnews.blogspot.com/"> Hulstrap</a></li>
@@ -309,5 +301,14 @@
             </div>
         </footer>
     <!-- ======= FOOTER ======= -->
+    <!-- ======= Scripts ======= -->
+        <!-- jquery JS File or cdn-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="./node_modules/jquery/dist/jquery.js"></script>
+        <!-- Handlebars JS File or cdn-->
+        <script src="./node_modules/handlebars/dist/handlebars.js"></script>
+        <!-- Template Main JS File -->
+        <script src="./assets/js/index.js"></script>
+    <!-- ======= /Scripts ======= -->
 </body>
 </html>
