Separating data from content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <li class="nav-item"><a href="#work"> Projects</a></li>
                                 <li class="nav-item"><a href="#services">Services</a></li>
                                 <li class="nav-item" id="contactModal">Contact</li>
-                                <li class="nav-item"><a href="https://lulem.000webhostapp.com/" class="btn-detail" target="blank">Projects</a></li>
+                                <li class="nav-item"><a href="https://lulem.000webhostapp.com/" class="btn-danger" target="blank">DevLule</a></li>
                             </ol>
                         </nav>
                     </div>
@@ -158,50 +158,7 @@
                 <section id="services" class="reveal fade-in">
                     <div class="container">
                         <h3 class="section-title">Services</h3>
-                        <div class="blog-list row-content hul">
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fas fa-brush"></i>
-                                </div>
-                                <h3>UI/IX design</h3>
-                                <p>I create interactive programs that enhance a customer's experience with a brand and facilitate an enjoyable experience on the business's website.</p>
-                            </div>
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fas fa-tasks"></i>
-                                </div>
-                                <h3>Web Development</h3>
-                                <p>I plan, create and code websites and web pages, many of which combine text with pictures, graphics and video clips.</p>
-                            </div>
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fas fa-binoculars"></i>
-                                </div>
-                                <h3>Responsive Design</h3>
-                                <p>Designing engaging and responsive landing pages</p>
-                            </div>
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fab fa-500px"></i>
-                                </div>
-                                <h3>Graphics Design</h3>
-                                <p>I visualize and create graphics including illustrations, logos, layouts and photos. I design most of the graphics i use in my programs</p>
-                            </div>
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fas fa-edit"></i>
-                                </div>
-                                <h3>Content Management</h3>
-                                <p>Building a brand identity and online presence through the creation and sharing of multimedia content online.</p>
-                            </div>
-                            <div class="service">
-                                <div class="circle">
-                                    <i class="fa fa-search"></i>
-                                </div>
-                                <h3>SEO</h3>
-                                <p>Developing and implementing effective search engine optimization (SEO) strategies. Using Google console and use meta tags</p>
-                            </div>
-                        </div>
+                        <div class="blog-list row-content" id="serviceInfo"></div>
                     </div>
                 </section>
             <!-- ======= /Service ======= -->
@@ -209,71 +166,7 @@
                 <section id="work" class="reveal fade-in">
                     <div class="container">
                         <h3 class="section-title">Projects</h3>
-                        <div class="row">
-                            <div class="col-md-6 col-lg-6">
-                                <div class="work">
-                                    <h2>Hulstrap <span class="tag-detail">css-library</span></h2>
-                                    <p><small class="text-primary">2021 - present</small></p>
-                                    <p>A css-library used to develop awesome user interface like this site is using. Developed i sass and some javascripts and can be modified and very easy to using by add some classes to html elements. Butttons, grid, cards, forms and more</p>
-                                    <ul>
-                                        <li><i class="fa-brands fa-css3"></i></li>
-                                        <li><i class="fab fa-sass"></i></li>
-                                        <li><i class="fa-brands fa-js-square"></i></li>
-                                    </ul>
-                                    <div class="btn-group">
-                                        <a href="https://github.com/lulemoses67/fiora-1.0/tree/main/New%20folder" class="btn-detail"><i class="fab fa-github"></i> Source code</a>
-                                        <a href="./hulstrap/index.html" class="btn-danger">Get Started</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6">
-                                <div class="work">
-                                    <h2>Personal Site <span class="tag-detail">portfolio</span></h2>
-                                    <p><small class="text-primary">2021 - present</small></p>
-                                    <p>An awesome portilio for any professional worker to highlight his or her experience and projects done in certain feilds. Responsive and also developed using Hulstrap my css-library.</p>
-                                    <ul>
-                                        <li><i class="fa-brands fa-html5"></i></li>
-                                        <li><i class="fa-brands fa-css3"></i></li>
-                                        <li><i class="fab fa-sass"></i></li>
-                                        <li><i class="fa-brands fa-js-square"></i></li>
-                                    </ul>
-                                    <div class="btn-group">
-                                        <a href="https://github.com/lulemoses67/lulemoses.github.io" class="btn-detail"><i class="fab fa-github"></i> Source code</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6">
-                                <div class="work">
-                                    <h2>Blog Filter</h2>
-                                    <p><small class="text-primary">2022 ( April - May )</small></p>
-                                    <p>A simple javascript program that can filter data by search, single detailed data, display all data in browser and filter data by any object property. Object are displayed using handlebars a simple js templating library
-                                    </p>
-                                    <ul>
-                                        <li><i class="fa-brands fa-js-square"></i></li>
-                                        <li><i class="fa fa-mustache"></i></li>
-                                    </ul>
-                                    <div class="btn-group">
-                                        <a href="https://lulem.000webhostapp.com/fiora/" class="btn-detail"><i class="fa fa-pen"></i> codepen</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-6">
-                                <div class="work">
-                                    <h2>Allianz Soccer <span class="tag-detail">E-sports</span></h2>
-                                    <p><small class="text-primary">2022 - present</small></p>
-                                    <p>Allianz Soccer Academy is a soccer Academy in Kampala, capital of Uganda. The academy tries so hard to train and instill football skills in young talents and expose them in the football world.(it is a NGO)</p>
-                                    <ul>
-                                        <li><i class="fa-brands fa-html5"></i></li>
-                                        <li><i class="fa-brands fa-css3"></i></li>
-                                        <li><i class="fab fa-sass"></i></li>
-                                        <li><i class="fa-brands fa-js-square"></i></li>
-                                    </ul>
-                                    <div class="btn-group">
-                                        <a href="https://lulem.000webhostapp.com/allianzsoccer/index.php" class="btn-danger"><i class="fa fa-eye"></i> preview</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="row" id="projectInfo"></div>
                     </div>
                 </section>
             <!-- ======= /Work ======= -->
@@ -301,6 +194,43 @@
             </div>
         </footer>
     <!-- ======= FOOTER ======= -->
+    <!-- ======= X-Handlebars-Template Scripts ======= -->
+        <!-- Showing services -->
+        <script id="service" type="text/x-handlebars-template">
+            {{#each services}}
+                <div class="service">
+                    <div class="circle">
+                        <i class="fas {{icon}}"></i>
+                    </div>
+                    <h3>{{title}}</h3>
+                    <p>{{detail}}</p>
+                </div>
+            {{/each}}
+        </script>
+        <!-- Showing work done -->
+        <script id="projects" type="text/x-handlebars-template">
+            {{#each projects}}
+                <div class="col-md-6 col-lg-6">
+                    <div class="work">
+                        <h2>{{projectName}} <span class="tag-detail">{{category}}</span></h2>
+                        <p><small class="text-primary">{{duration}}</small></p>
+                        <p>{{about}}</p>
+                        <ul>
+                            {{#each this.progLang}}
+                                <li><i class="{{this}}"></i></li>
+                            {{/each}}
+                        </ul>
+                        <div class="btn-group">
+                            {{#if sourceCode}}<a href="{{sourceCode}}" class="btn-detail"><i class="fab fa-github"></i> Source code</a>{{/if}}
+                            {{#if link}}<a href="{{link}}" class="btn-danger"><i class="fa fa-link"></i> Link</a>{{/if}}
+                            {{#if preview}}<a href="{{preview}}" class="btn-danger"><i class="fa fa-eye"></i> preview</a>{{/if}}
+                            {{#if pen}}<a href="{{pen}}" class="btn-detail"><i class="fa fa-pen"></i> codepen</a>{{/if}}
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+        </script>
+    <!-- ======= /X-Handlebars-Template Scripts ======= -->
     <!-- ======= Scripts ======= -->
         <!-- jquery JS File or cdn-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -308,7 +238,7 @@
         <!-- Handlebars JS File or cdn-->
         <script src="./node_modules/handlebars/dist/handlebars.js"></script>
         <!-- Template Main JS File -->
-        <script src="./assets/js/index.js"></script>
+        <script src="./assets/js/index.js" type="module"></script>
     <!-- ======= /Scripts ======= -->
 </body>
 </html>
