--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
         <!-- Handlebars JS File or cdn-->
         <script src="./node_modules/handlebars/dist/handlebars.js"></script>
         <!-- Template Main JS File -->
-        <script src="./assets/js/index.js" type="module"></script>
+        <script src="./assets/js/scripts.js"></script>
+        <script src="./assets/js/db.js"></script>
+        <script src="./assets/js/index.js"></script>
     <!-- ======= /Scripts ======= -->
 </body>
 </html>
