--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
     <!-- ======= Scripts ======= -->
         <!-- jquery JS File or cdn-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="./node_modules/jquery/dist/jquery.js"></script>
         <!-- Handlebars JS File or cdn-->
-        <script src="./node_modules/handlebars/dist/handlebars.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.js" integrity="sha512-c7SfJeKRl8g7wgL+zMGX78faYVGp+NZVQ587mRLrqeLySX/qHCQOKw/iZ5Pp64DaPjvedixWC/Fe73upnhBaRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- Template Main JS File -->
         <script src="./assets/js/scripts.js"></script>
         <script src="./assets/js/db.js"></script>
