--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
     <!-- Meta Data-->
     <title>Lule Moses</title>
-    <meta content="Hi , am a front-end developer, i design and develop awesome, responsive and effective websites and web applications using HTML, CSS, JAVASCRIPT, PHP, MYSQL and REACTS." name="description">
-    <meta content="lulemoses,lule moses, Lule, Moses, Hultech, web developer kampala, front-end developer,front-end developer uganda" name="keywords">
+    <meta content="Am Moses a Front-End Developer from Kampala, Uganda" name="description">
+    <meta content="lule, moses, Lule Moses, web developer, kampala, front-end developer,front-end developer uganda" name="keywords">
 
      <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C7QQ4DV6CL"></script>
@@ -36,6 +36,12 @@
     ======================================================== -->
 </head>
 <body>
+    <!-- ======= Pre-Loader ======= -->
+        <div id="preLoader" class="bg-dark">
+            <div class="content row justify-center align-center">
+                <p class="text-primary"><i class="fa-solid fa-spinner"></i></p>
+            </div>
+        </div>
     <!-- ======= Contact Modal ======= -->
         <div class="modal contact-modal">
             <div class="modal-body">
@@ -115,7 +121,7 @@
                                     <img src="./assets/imgs/lulemoses.png" alt="Lule Moses" class="img-dp">
                                     <h1>Moses Lule</h1>
                                     <p><small>Front-end Developer</small></p>
-                                    <p>Hi, am moses a front-end developer , i design and develop awesome, responsive and effective USER INTERFACE and USER EXPERIENCE for websites, web applications and mobile applications using SASS, JAVASCRIPT, BOOTSTRAP and REACTSTRAP for Reacts apps. I intend to become a full-stack with time and i been developing some databases appication in php and mysql , and have created some CRUDS and relational databases systems. I use PDO and like using the POST-REDIRECT-GET pattern, sessions, protect my programms from html injections as possible and understand the Model Controller and View Controller.I love technology, I like talking about tech and this why whenever am free i try to write on my blog . It's a tech news blog with a daily tech report www.hul-net.com </p>
+                                    <p>Am Moses a Front-End Developer from Kampala, Uganda with over 1 year experience of design and development of awesome, responsive and effective UI and UX for websites, web applications and mobile applications using HTML, CSS/SASS, JAVASCRIPT, BOOTSTRAP, REACT and I intend to become a Full-Stack Developer with time and i been developing some databases appication in PHP and MySQL.</p>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4">
@@ -133,7 +139,6 @@
                                             <li class="grid-title"><h4>Styles</h4></li>
                                             <li>bootstrap</li>
                                             <li>scss</li>
-                                            <li>reactstrap</li>
                                         </ul>
                                         <ul class="framework">
                                             <li class="grid-title"><h4>Frameworks / Libraries</h4></li>
@@ -190,7 +195,7 @@
                 <li class="nav-item"><a href="https://www.fiverr.com/lulemoses67"> Fiverr</a></li>
             </ul>
             <div class="copyright text-center">
-                <p><small>© 2022 Moses Lule . All rights reserved. No part of this site may be reproduced without my written permission.</small></p>
+                <p><small>© Moses Lule.</small></p>
             </div>
         </footer>
     <!-- ======= FOOTER ======= -->
